# tree-sitter-oxiby

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-oxiby.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_oxiby/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOxiby/: oxiby.h
bindings/swift/TreeSitterOxibyTests/: TreeSitterOxibyTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
