[package]
name = "tree-sitter-oxiby"
description = "Oxiby grammar for tree-sitter"
version = "0.1.0"
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "oxiby"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/oxiby/tree-sitter-oxiby"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
