[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-oxiby"
description = "Oxiby grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "oxiby"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Jimmy Cuadra", email = "jimmy@jimmycuadra.com" }]
requires-python = ">=3.10"
license.text = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/oxiby/tree-sitter-oxiby"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
